Updates from Overleaf

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -66,7 +66,7 @@ As mentioned in the last section,  nuclei heavier than iron (A $\textgreater$ 56
 
 The s-process proceeds through nuclei that $\beta$-decay rapidly compared with the time between successive neutron capture.  It starts from the iron seed along the group of stable nuclei and will eventually terminate at the most massive stable nucleus $^{209}$Bi. Fig.~\ref{fig:n-cap} illustrated the path of the s-process in a portion of the chart of the nuclides, along with the r-process which  drives the nuclei to the neutron-rich region. 
 The inset gives the solar abundance distribution relative to 10$^6$ Si atoms. The sharp abundance peaks denoted as $s$  near the mass numbers A = 88, 138 and 208 (corresponding to the neutron magic numbers of N = 50, 82 and 126, respectively) are due to the s-process,  indicating  the impact of the nuclear structure effect.
-The s-process can be considered as a ¡®secondary¡¯ process
+The s-process can be considered as a ï¿½ï¿½secondaryï¿½ï¿½ process
 in the sense that the seed nuclei (typically $^{56}$Fe) must have existed at the stellar birth as the stellar evolution does not produce the heavy elements before those burning phases are triggered. This is in contrast to  the r-process which generally is referred to as a `primary' process as it is likely to proceed on freshly produced seeds in the interiors of extreme stellar environment (Type-II supernovae for instance).
 
 
@@ -135,7 +135,7 @@ It is reasonable to assume that different sites are required for each of the obs
 
 \subsection{AGB stars}
 
-The main component of the s-process is shown to occur in low mass as well as intermediate mass (0.8 M$_\odot$ $\lesssim$ M $\lesssim$ 8 M$_\odot$ ) Asymptotic Giant Branch (AGB) stars during a thermal pulsing phase, accounting for the s-process nuclei in the mass range  90 $\lesssim$ A $\lesssim$ 208.  The model of an AGB star can be explained by the evolution of M = 5$M_{\odot}$ in  the Hertzsprung-Russel (HR) diagram, which plots the luminosity versus surface temperature of a star (shown in Fig.\ref{fig:AGB}).
+The main component of the s-process is shown to occur in low mass as well as intermediate mass (0.8M$_\odot$ $\lesssim$ M $\lesssim$ 8M$_\odot$ ) Asymptotic Giant Branch (AGB) stars during a thermal pulsing phase, accounting for the s-process nuclei in the mass range  90 $\lesssim$ A $\lesssim$ 208.  The model of an AGB star can be explained by the evolution of M = 5$M_{\odot}$ in  the Hertzsprung-Russel (HR) diagram, which plots the luminosity versus surface temperature of a star (shown in Fig.~\ref{fig:AGB}).
 
 Core hydrogen burning sets in on the zero age main sequence (ZAMS) and   slowly continues,  converting hydrogen in its core into helium. Once a significant fraction of about 10$\%$ of central hydrogen is exhausted, which takes about 10$^9$ to 10$^{10}$ years, the star will move towards the red giant phase as the envelope expands. Between the first dredge-up and the red giant branch (RGB), the hydrogen shell burns  and brings helium to the core, increasing the temperature rapidly, therefore, the core helium burning is ignited. The envelope expands once again as the core burns its helium until the core helium runs of out of materials. At this point the hydrogen and helium shell will burn periodically around the C-O core. The star will then undergo a thermal pulsing (TP) AGB phase, where the helium shell surrounding the C-O core and the hydrogen in the outer convective shell  burn alternately. At this moment the star appears close to the RGB, giving the name of AGB phase.
 
