--- a/chapter4.tex
+++ b/chapter4.tex
@@ -152,7 +152,7 @@ where the fitting parameters $a_{i}$, $b_{i}$ , $c_{ij}$ and $d_{ij}$ were deter
 \begin{figure}[tpb]
   \begin{center}
     \centerline{\includegraphics[scale=0.8]{graph/ch4/angle_cal}}
-    \caption{2D histogram of the angular calibration run with the sieve-slit. Left panel: measurement of the vertical focal plane position ($y_{fp}$) versus horizonal angle ($\theta_{fp}$). Each blob is associated with a hole of the sieve-slit. Right Panel: reconstructed pattern at the target position after the angular calibration. Data from $^{197}$Au(d,d¡¯)$^{197}$Au at 10$^{\circ}$.}
+    \caption{2D histogram of the angular calibration run with the sieve-slit. Left panel: measurement of the vertical focal plane position ($y_{fp}$) versus horizonal angle ($\theta_{fp}$). Each blob is associated with a hole of the sieve-slit. Right Panel: reconstructed pattern at the target position after the angular calibration. Data from $^{197}$Au(d,dï¿½ï¿½)$^{197}$Au at 10$^{\circ}$.}
     \label{fig:anglecalib}
   \end{center}
 \end{figure}
