--- a/reference.bib
+++ b/reference.bib
@@ -152,7 +152,7 @@ pages="491--510",
 title = "Magnetic spectrometer Grand Raiden",
 journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
 volume = "422",
-number = "1¨C3",
+number = "1ï¿½C3",
 pages = "484 - 488",
 year = "1999",
 issn = "0168-9002",
@@ -171,7 +171,7 @@ author = "Y. Fujita and K. Hatanaka and G.P.A. Berg and K. Hosono and N. Matsuok
 }
 
 @article{FUJITA200155,
-title = "Better-resolution measurement of vertical scattering angle in a new ion-optical mode of spectrometer ¡°Grand Raiden¡±",
+title = "Better-resolution measurement of vertical scattering angle in a new ion-optical mode of spectrometer ï¿½ï¿½Grand Raidenï¿½ï¿½",
 journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment",
 volume = "469",
 number = "1",
@@ -210,7 +210,7 @@ author = "H Fujita and Y Fujita and G.P.A Berg and A.D Bacher and C.C Foster and
 title = "High resolution beam line for the Grand Raiden spectrometer ",
 journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
 volume = "482",
-number = "1¨C2",
+number = "1ï¿½C2",
 pages = "79 - 93",
 year = "2002",
 author = "T Wakasa and K Hatanaka and Y Fujita and G.P.A Berg and H Fujimura and H Fujita and M Itoh and J Kamiya and T Kawabata and K Nagayama and T Noro and H Sakaguchi and Y Shimbara and H Takeda and K Tamura and H Ueno and M Uchida and M Uraki and M Yosoi",
@@ -237,7 +237,7 @@ author = "K. Hatanaka and N. Matsuoka and T. Saito and K. Hosono and M. Kondo an
 
 
 @article{ENDT19901,
-title = "Energy levels of A = 21¨C44 nuclei (VII)",
+title = "Energy levels of A = 21ï¿½C44 nuclei (VII)",
 journal = "Nuclear Physics A",
 volume = "521",
 number = "",
@@ -486,7 +486,7 @@ volume = {67},
 publisher = {Elsevier B.V.},
 number = {2},
 year = {1965},
-title = {The angular distributions of the (t, p), (d, p) and (d, d¡ä) reactions leading to 26Mg},
+title = {The angular distributions of the (t, p), (d, p) and (d, dï¿½ï¿½) reactions leading to 26Mg},
 language = {eng},
 author = {Hinds, S. and Marchant, H. and Middleton, R.},
 keywords = {Nuclear Reactions},
