Updates from Overleaf

--- a/reference.bib
+++ b/reference.bib
@@ -583,6 +583,56 @@ keywords = {Nuclear Reaction},
 }
 
 
+%%%%%%an and ag
+
+@article{Harms1991,
+  title = {Properties of $^{22}\mathrm{Ne}$(\ensuremath{\alpha},n${)}^{25}$Mg resonances},
+  author = {Harms, V. and Kratz, K.-L. and Wiescher, M.},
+  journal = {Phys. Rev. C},
+  volume = {43},
+  issue = {6},
+  pages = {2849--2861},
+  numpages = {0},
+  year = {1991},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevC.43.2849},
+  url = {https://link.aps.org/doi/10.1103/PhysRevC.43.2849}
+}
+
+
+@article{DrotleffHw1993,
+issn = {0004-637X},
+journal = {Astrophysical Journal},
+pages = {735--739},
+volume = {414},
+publisher = {UNIV CHICAGO PRESS},
+number = {2},
+year = {1993},
+title = {REACTION-RATES OF THE S-PROCESS NEUTRON SOURCES NE-22(ALPHA,N)MG-25 AND C-13(ALPHA,N)O-16(1)},
+language = {English},
+author = {Drotleff, Hw and Denker, A and Knee, H and Soine, M and Wolf, G and Hammer, JW and Griefe, U and Rolfs, C and Trautvetter, Hp},
+}
+
+
+
+%%%%%%%%%%%%%%chapter6
+
+%%%%spectroscopic factor
+@article{Burlein1984,
+  title = {Spectroscopic factors in $^{25}\mathrm{Mg}$(d,p)$^{26}\mathrm{Mg}$},
+  author = {Burlein, M. and Dhuga, K. S. and Fortune, H. T.},
+  journal = {Phys. Rev. C},
+  volume = {29},
+  issue = {6},
+  pages = {2013--2016},
+  numpages = {0},
+  year = {1984},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevC.29.2013},
+  url = {https://link.aps.org/doi/10.1103/PhysRevC.29.2013}
+}
 
 %%%%%%%%%%%%%%%
 
